# 100-rust-proyects

./: .gitignore  README.md  notes.txt
10_Exercises/d100_ai_prompt_pack/: Cargo.toml  prompts.json
10_Exercises/d91_chatgpt_api/: Cargo.toml
10_Exercises/d92_fantoccini_auto/: Cargo.toml
10_Exercises/d93_wiki_generator/: Cargo.toml
10_Exercises/d94_graph_visualizer/: Cargo.toml
10_Exercises/d95_merge_tool/: Cargo.toml  base.json  patch.json
10_Exercises/d96_toml_pdf/: Cargo.toml  README.md  resume.html
10_Exercises/d97_soundboard/: Cargo.toml
10_Exercises/d98_wasm_filter/: Cargo.toml  LICENSE_MIT  index.html
10_Exercises/d99_docker_generator/: Cargo.toml  Dockerfile
1_Exercises/d02_temp_converter/: Cargo.toml
1_Exercises/d03_calculator/: Cargo.toml
1_Exercises/d04_random_game/: Cargo.toml
1_Exercises/d05_word_counter/: Cargo.toml  text.txt
1_Exercises/d06_bmi/: Cargo.toml
1_Exercises/d06_bmi/src/: main.rs
1_Exercises/d07_palindrome/: Cargo.toml
1_Exercises/d08_fibonacci/: Cargo.toml
1_Exercises/d09_prime_numbers/: Cargo.toml
1_Exercises/d10_todo_list/: Cargo.toml
2_Exercises/d11_timer_tool/: Cargo.toml
2_Exercises/d12_rock_paper_scissors/: Cargo.toml
2_Exercises/d13_json_parser/: Cargo.toml  tasks.json
2_Exercises/d14_file_reader_cli/: Cargo.toml  temp.txt
2_Exercises/d15_memory_management/: Cargo.toml
2_Exercises/d16_string_manipulation/: Cargo.toml
2_Exercises/d17_contact_manager/: Cargo.toml
2_Exercises/d18_banking_system/: Cargo.toml
8_Exercises/d72_front_todo/: Cargo.toml
8_Exercises/d72_front_todo/src/: main.rs
(+201 files in other folders)
