[package]
name = "d72_front_todo"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-console = "0.2"
gloo-net = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.108"
yew = { version = "0.22.0", features = ["csr"] }
wasm-bindgen-futures = "0.4"

[server]
port = 3000